src/test/deca/syntax/invalid/op_divide_plus.synt
op_divide_plus.deca:11: